# SeekStorm

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  FACETED_SEARCH.md  LICENSE  NGRAM_SEARCH.md  README.md  coming_soon.txt  rustfmt.toml
.cargo/: config.toml
assets/dictionaries/: frequent_en.txt  frequent_fr.txt  license.txt
seekstorm/: Cargo.toml
seekstorm/assets/dictionaries/: frequent_de.txt  frequent_es.txt
seekstorm/src/: add_result.rs  clustering.rs  commit.rs  compatible.rs  compress_postinglist.rs  doc_store.rs  geo_search.rs  highlighter.rs  index.rs  index_posting.rs  ingest.rs  intersection.rs  iterator.rs  lib.rs  min_heap.rs  realtime_search.rs  search.rs  utils.rs  vector.rs  vector_similarity.rs  word_segmentation.rs
seekstorm_client/: Cargo.toml  README.md
seekstorm_client/src/: api_endpoints.rs  lib.rs
seekstorm_client/tests/: test.rs
seekstorm_server/: Cargo.toml  README.md
seekstorm_server/openapi/: openapi.json  openapi.yml
seekstorm_server/src/: api_endpoints.rs  http_server.rs  main.rs  server.rs  test_api.rest
seekstorm_server/web/: index.html
seekstorm_server/web/css/: bootstrap.histogram.slider.css  histogram.slider.css  master.css  master.css.map  master.scss
seekstorm_server/web/js/: bootstrap-slider.js  bootstrap.histogram.slider.js  bootstrap.slider.license.txt  master.js
src/seekstorm/: add_result.rs  clustering.rs  commit.rs  commit_level.rs  compress_postinglist.rs  doc_store.rs  geo_search.rs  highlighter.rs  index.rs  index_posting.rs  ingest.rs  intersection.rs  intersection_simd.rs  iterator.rs  lib.rs  min_heap.rs  realtime_search.rs  search.rs  single.rs  tokenizer.rs  union.rs  utils.rs  word_segmentation.rs
src/seekstorm_server/: README.md  api_endpoints.rs  http_server.rs  ingest.rs  main.rs  multi_tenancy.rs  server.rs  test_api.rest
src/seekstorm_server/openapi/: openapi.json  openapi.yml
src/seekstorm_server/web/: index.html
src/seekstorm_server/web/css/: master.css
src/seekstorm_server/web/js/: autocomplete.js  bootstrap.histogram.slider.license.txt  master.js
tests/: test.rs
