[package]
name = "seekstorm"
version = "2.1.0"
authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
license = "Apache-2.0"
categories = ["database-implementations", "data-structures"]
description = """Search engine library & multi-tenancy server"""
documentation = "https://docs.rs/seekstorm/"
homepage = "https://seekstorm.com"
repository = "https://github.com/SeekStorm/SeekStorm"
readme = "README.md"
keywords = ["search", "information", "retrieval"]
edition = "2024"
exclude = ["assets/*.png","assets/*.jpg"]

[features]
# comment out entry below if you don't need Chinese word segmentation
default = ["zh","pdf"]
zh = []
pdf = ["pdfium-render"]

[lib]
name = "seekstorm"
path = "src/seekstorm/lib.rs"

[[bin]]
name = "seekstorm_server"
path = "src/seekstorm_server/main.rs"

[dependencies]
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
base64 = "0.22.1"
num-format = "0.4.4"
ahash ={ version = "0.8.12", features = ["serde"]}
rand = "0.9.2"
futures = "0.3.31"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
regex = "1.12.2"
lazy_static = "1.5.0"
hyper = { version = "1.8.1", features = ["full","server"] }
hyper-util = { version ="0.1.19",  features = ["server","tokio","http1","http2"]}
http-body-util = "0.1.3"
url = "2.5.8"
sha2 = "0.10.9"
itertools = "0.14.0"
async-recursion = "1.1.1"
zstd = "0.13.3"
rayon = "1.11.0"
aho-corasick = "1.1.4"
smallvec = "1.15.1"
memmap2 = "0.9.9"
regex-syntax = "0.8.8"
indexmap = { version = "2.13.0", features = ["serde"]}
unicode-normalization = "0.1.25"
finl_unicode = "1.4.0"
colored = "3.1.1"
walkdir = "2.5.0"
pdfium-render = { version ="0.8.37",  features = ["thread_safe","sync"], optional = true}
chrono = "0.4.43"
utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order","yaml"]}
num_cpus = "1.17.0"
rust-stemmers = "1.2.0"
csv = "1.4.0"
symspell_complete_rs = "0.0.2"
tokio-test = "0.4.4"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version ="0.3.9",  features = ["winbase"]}

[target.'cfg(all(target_feature = "aes", target_feature = "sse2"))'.dependencies]
gxhash = { version = "3.5.0", features = ["deterministic"]}

[lints.rust]
missing_docs = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
overflow-checks = false
strip = "debuginfo"

[package.metadata.docs.rs]
rustc-args = ["-C", "target-cpu=native"]
rustdoc-args = ["-C", "target-cpu=native"]
