[package]
name = "seekstorm_client_rs"
version = "3.3.0"
authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
license = "Apache-2.0"
categories = ["database-implementations", "data-structures"]
description = """Rust Client for SeekStorm vector & lexical search server"""
documentation = "https://docs.rs/seekstorm_client_rs"
homepage = "https://seekstorm.com"
repository = "https://github.com/SeekStorm/seekstorm_client_rs"
readme = "README.md"
keywords = ["search", "information", "retrieval"]
edition = "2024"

[lib]
name = "seekstorm_client_rs"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.45"
base64 = "0.22.1"
reqwest = { version = "0.13.4", features = ["json"] }
seekstorm =  { version = "3.3.0", path = "../seekstorm", default-features = false }
serde_json = "1.0.150"
tokio = "1.52.3"
tokio-test = "0.4.5"

#[dev-dependencies]
#tokio = { version = "1", features = ["full", "process"] }
# This forces Cargo to compile the server whenever you run client tests
#seekstorm_server = { path = "../seekstorm_server" }
