[package]
name = "seekstorm_server"
version = "3.3.0"
authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
license = "Apache-2.0"
categories = ["database-implementations", "data-structures"]
description = """Vector & lexical search engine library & multi-tenancy server"""
documentation = "https://seekstorm.github.io/documentation/"
homepage = "https://seekstorm.com"
repository = "https://github.com/SeekStorm/SeekStorm"
readme = "../README.md"
keywords = ["search", "information", "retrieval"]
edition = "2024"

[features]
default = ["zh","pdf","vb"]
zh = ["seekstorm/zh"]
pdf = ["seekstorm/pdf"]
vb = ["seekstorm/vb"]

[[bin]]
name = "seekstorm_server"
path = "src/main.rs"

[dependencies]
# This forces the library to compile WITH gxhash when building the server binary
seekstorm = { version = "3.3.0", path = "../seekstorm" , features = ["gxhash"], default-features = false} 
ahash ={ version = "0.8.12", features = ["serde"]}
base64 = "0.22.1"
chrono = "0.4.45"
colored = "3.1.1"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.2"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["full", "server"] }
hyper-util = { version = "0.1.20", features = ["server", "tokio", "http1", "http2"] }
indexmap = { version = "2.14.0", features = ["serde"] }
itertools = "0.15.0"
num-format = "0.4.4"
num_cpus = "1.17.0"
rand = { version = "0.10.2", features = ["chacha"] }
rkyv = "0.8.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sha2 = "0.11.0"
tabled = { version = "0.21.0", features = ["ansi"] }
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
utoipa = { version ="5.5.0",  features = ["preserve_order","preserve_path_order","yaml","indexmap"]}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "processthreadsapi"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustc-args = ["-C", "target-cpu=native"]
rustdoc-args = ["-C", "target-cpu=native"]